--- a/products.html
+++ b/products.html
@@ -43,14 +43,11 @@ header {
   cursor: pointer;
   font-weight: bold;
   font-size: 14px;
+  /* الألوان كما هي */
 }
-.header-buttons button:hover { background: #f7ca00; }
 
 /* زر الجرس */
 #notifBtn {
-  background: #ff4444;
-  border: 1px solid #cc0000;
-  color: #fff;
   position: relative;
 }
 #notif-count {
@@ -105,11 +102,11 @@ header {
   display: none;
 }
 
-/* عرض المنتجات - تجربة عمودين */
+/* عرض المنتجات القديم */
 #products-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 15px;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  gap: 12px;
   padding: 15px;
 }
 
@@ -126,8 +123,8 @@ header {
 .product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
 .product img {
   width: 100%;
-  height: 120px;
-  object-fit: contain;
+  height: 160px; /* تكبير الصورة لتملأ المربع */
+  object-fit: cover; /* تغطي المربع بالكامل مع الحفاظ على تناسبها */
   margin-bottom: 8px;
 }
 .name { font-size: 16px; margin: 5px 0; color: #333; }
@@ -143,13 +140,12 @@ header {
   padding: 5px 10px;
   border: none;
   border-radius: 5px;
-  background: #8a2be2;
-  color: #fff;
   cursor: pointer;
   font-weight: bold;
   transition: 0.3s;
+  /* الألوان كما هي */
 }
-.product button:hover { background: #6a1fbf; transform: scale(1.05); }
+.product button:hover { transform: scale(1.05); }
 
 /* نافذة اجمالي الفاتورة */
 #totalModal {
@@ -178,39 +174,22 @@ header {
   padding: 8px 15px;
   border: none;
   border-radius: 10px;
-  background: #8a2be2;
-  color: #fff;
   cursor: pointer;
   font-weight: bold;
   transition: 0.3s;
+  /* الألوان كما هي */
 }
-#totalModal button:hover { background: #6a1fbf; }
+#totalModal button:hover { }
 
 /* قائمة السلة */
 #cartList { text-align: right; margin-bottom: 10px; }
-.cart-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #ccc;
-  padding: 5px 0;
-}
+.cart-item { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #ccc; padding: 5px 0; }
 .cart-item span { margin: 0 5px; }
 .cart-item button { padding: 2px 8px; font-size: 14px; }
 
 /* الأرقام تحت بعض */
-#orderNumbers a {
-  display: block;
-  margin: 5px 0;
-  font-size: 16px;
-  color: #8a2be2;
-  font-weight: bold;
-  text-decoration: none;
-}
-#orderNumbers a:hover {
-  color: #6a1fbf;
-  text-decoration: underline;
-}
+#orderNumbers a { display: block; margin: 5px 0; font-size: 16px; color: #8a2be2; font-weight: bold; text-decoration: none; }
+#orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
 
 /* Toast */
 #toast {
@@ -266,7 +245,6 @@ const container = document.getElementById("products-container");
 let productsData = [];
 let cart = [];
 
-// عرض المنتجات
 function renderProducts(data){
     let html = "";
     for(let i=0;i<data.length;i++){
@@ -284,7 +262,6 @@ function renderProducts(data){
     container.innerHTML = html;
 }
 
-// تحميل المنتجات بسرعة
 (async function(){
    if(localStorage.getItem("products")){
       productsData = JSON.parse(localStorage.getItem("products"));
@@ -296,8 +273,6 @@ function renderProducts(data){
      productsData = data.reverse();
      localStorage.setItem("products", JSON.stringify(productsData));
      renderProducts(productsData);
-
-     // 🔔 تحقق من المنتجات الجديدة
      setTimeout(checkNewProducts, 1500);
    } catch(err){ console.log("❌ خطأ في جلب المنتجات:",err); }
 })();
@@ -388,27 +363,20 @@ function openSupport(){
   window.open("https://wa.me/201022495795", "_blank");
 }
 
-// 🔔 التحقق من المنتجات الجديدة
 function checkNewProducts(){
   const today = new Date().toISOString().split("T")[0];
   let newCount = 0;
-
   productsData.forEach(p=>{
     if(p.date && p.date.startsWith(today)){
       newCount++;
     }
   });
-
   if(newCount > 0){
     document.getElementById("notif-count").innerText = newCount;
     document.getElementById("notif-count").style.display = "inline-block";
     document.getElementById("newBanner").style.display = "block";
-
-    // صوت إشعار
     let audio = new Audio("https://www.soundjay.com/buttons/sounds/button-3.mp3");
     audio.play();
-
-    // إشعار المتصفح
     if(Notification.permission === "granted"){
       new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
     } else if(Notification.permission !== "denied"){
@@ -421,7 +389,6 @@ function checkNewProducts(){
   }
 }
 
-// 🔍 البحث
 document.getElementById("searchBox").addEventListener("input", function(){
   const keyword = this.value.trim().toLowerCase();
   const filtered = productsData.filter(p => p.name.toLowerCase().includes(keyword));
