--- a/products.html
+++ b/products.html
@@ -5,55 +5,46 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>جميع منتجات جنة</title>
 <style>
-body {
-  font-family: Tahoma, sans-serif;
-  margin: 0;
-  background: #f9f9f9;
-}
+body { font-family: Tahoma, sans-serif; margin:0; background:#f9f9f9; }
 
 /* الهيدر */
 header {
   background: #131921;
   color: white;
-  padding: 10px 15px;
+  padding: 15px;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
   position: sticky;
   top: 0;
   z-index: 1000;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
-
-/* ترتيب أزرار الهيدر */
-.header-buttons {
-  margin-top: 10px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 5px;
-}
+.header-buttons { margin-top: 10px; display: flex; flex-wrap: wrap; justify-content: center; gap:5px;}
 .header-buttons button {
-  flex: 1 1 120px; /* مرونة حسب الشاشة */
-  max-width: 150px;
-  padding: 6px 10px;
+  background: #ffd814;
+  border: 1px solid #fcd200;
+  padding: 6px 12px;
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
-  font-size: 14px;
-  /* الألوان كما هي */
 }
+.header-buttons button:hover { background: #f7ca00; }
 
 /* زر الجرس */
 #notifBtn {
   position: relative;
+  background: #ff4444;
+  border: 1px solid #cc0000;
+  padding: 6px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+  color: #fff;
 }
 #notif-count {
   position: absolute;
-  top: -6px;
-  right: -6px;
+  top: -8px;
+  right: -8px;
   background: yellow;
   color: black;
   font-size: 12px;
@@ -61,20 +52,6 @@ header {
   padding: 2px 6px;
   border-radius: 50%;
   display: none;
-}
-
-/* تثبيت مربع البحث */
-#searchBox {
-  width: 90%;
-  max-width: 400px;
-  padding: 8px 10px;
-  margin-top: 10px;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-  font-size: 16px;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-  background: #fff;
-  z-index: 1001;
 }
 
 /* بانر المنتج الجديد */
@@ -102,15 +79,26 @@ header {
   display: none;
 }
 
-/* عرض المنتجات القديم */
+/* مربع البحث */
+#searchBox {
+  display: block;
+  margin: 15px auto;
+  padding: 10px;
+  width: 90%;
+  max-width: 400px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+}
+
+/* المنتجات */
 #products-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
   gap: 12px;
   padding: 15px;
 }
-
-/* المنتجات */
 .product {
   border: 1px solid #ccc;
   border-radius: 10px;
@@ -123,29 +111,24 @@ header {
 .product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
 .product img {
   width: 100%;
-  height: 160px; /* تكبير الصورة لتملأ المربع */
-  object-fit: cover; /* تغطي المربع بالكامل مع الحفاظ على تناسبها */
+  height: 120px;
+  object-fit: contain;
   margin-bottom: 8px;
 }
 .name { font-size: 16px; margin: 5px 0; color: #333; }
 .price { font-weight: bold; margin-bottom: 5px; }
-.product input {
-  width: 50px;
-  margin: 5px 0;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  text-align: center;
-}
+.product input { width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
 .product button {
   padding: 5px 10px;
   border: none;
   border-radius: 5px;
+  background: #8a2be2;
+  color: #fff;
   cursor: pointer;
   font-weight: bold;
   transition: 0.3s;
-  /* الألوان كما هي */
 }
-.product button:hover { transform: scale(1.05); }
+.product button:hover { background: #6a1fbf; transform: scale(1.05); }
 
 /* نافذة اجمالي الفاتورة */
 #totalModal {
@@ -174,21 +157,35 @@ header {
   padding: 8px 15px;
   border: none;
   border-radius: 10px;
+  background: #8a2be2;
+  color: #fff;
   cursor: pointer;
   font-weight: bold;
   transition: 0.3s;
-  /* الألوان كما هي */
 }
-#totalModal button:hover { }
+#totalModal button:hover { background: #6a1fbf; }
 
 /* قائمة السلة */
 #cartList { text-align: right; margin-bottom: 10px; }
-.cart-item { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #ccc; padding: 5px 0; }
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  padding: 5px 0;
+}
 .cart-item span { margin: 0 5px; }
 .cart-item button { padding: 2px 8px; font-size: 14px; }
 
 /* الأرقام تحت بعض */
-#orderNumbers a { display: block; margin: 5px 0; font-size: 16px; color: #8a2be2; font-weight: bold; text-decoration: none; }
+#orderNumbers a {
+  display: block;
+  margin: 5px 0;
+  font-size: 16px;
+  color: #8a2be2;
+  font-weight: bold;
+  text-decoration: none;
+}
 #orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
 
 /* Toast */
@@ -210,24 +207,22 @@ header {
 <header>
   📦 جميع منتجات جنة
   <div class="header-buttons">
-    <button onclick="showTotal()">🛒 السلة <span id="cart-count">0</span></button>
-    <button onclick="showTotal()">💰 إجمالي الفاتورة</button>
-    <button onclick="openSupport()">☎️ الدعم الفني</button>
+    <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
+    <button id="totalBtn">💰 إجمالي الفاتورة</button>
+    <button id="supportBtn">☎️ الدعم الفني</button>
     <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
     <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
   </div>
-  <!-- مربع البحث ثابت داخل الهيدر -->
   <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
 </header>
 
 <div id="newBanner">🎉 منتجات جديدة اليوم!</div>
-
 <div id="products-container"></div>
 
 <div id="totalModal">
   <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
   <div id="cartList"></div>
-  <button onclick="sendOrder()">📤 إرسال عبر واتساب</button>
+  <button id="sendBtn">📤 إرسال عبر واتساب</button>
   <button onclick="closeTotalModal()">❌ إغلاق</button>
   <div id="orderNumbers" style="margin-top:10px; display:none;">
     <p>اختر رقم لإرسال الطلب 👇</p>
@@ -245,23 +240,23 @@ const container = document.getElementById("products-container");
 let productsData = [];
 let cart = [];
 
+// عرض المنتجات
 function renderProducts(data){
-    let html = "";
-    for(let i=0;i<data.length;i++){
-        const item = data[i];
-        html += `
-            <div class="product">
-                <img src="${item.image || 'https://via.placeholder.com/150'}" alt="صورة المنتج">
-                <div class="name">${item.name}</div>
-                <div class="price">السعر: ${item.price} جنيه</div>
-                <input type="number" min="1" value="1" data-index="${i}">
-                <button onclick="addToCart(${i})">أضف إلى السلة</button>
-            </div>
-        `;
-    }
-    container.innerHTML = html;
+  let html = "";
+  for(let i=0;i<data.length;i++){
+      const item = data[i];
+      html += `<div class="product">
+                  <img src="${item.image || 'https://via.placeholder.com/150'}">
+                  <div class="name">${item.name}</div>
+                  <div class="price">السعر: ${item.price} جنيه</div>
+                  <input type="number" min="1" value="1" data-index="${i}">
+                  <button onclick="addToCart(${i})">أضف إلى السلة</button>
+               </div>`;
+  }
+  container.innerHTML = html;
 }
 
+// تحميل سريع للمنتجات
 (async function(){
    if(localStorage.getItem("products")){
       productsData = JSON.parse(localStorage.getItem("products"));
@@ -287,111 +282,89 @@ function showToast(msg){
 function updateCartCount(){
   const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
   const badge = document.getElementById("cart-count");
-  if(count>0){
-    badge.style.display = "inline-block";
-    badge.innerText = count;
-  } else {
-    badge.style.display = "none";
-  }
+  badge.style.display = count>0?"inline-block":"none";
+  badge.innerText = count;
 }
 
 function addToCart(index){
   const input = container.querySelector(`input[data-index='${index}']`);
   const quantity = parseInt(input.value);
-  if(quantity <=0) return;
+  if(quantity<=0) return;
   cart[index] = (cart[index] || 0) + quantity;
   updateCartCount();
   showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`);
 }
 
 function showTotal(){
-  let total = 0;
-  const cartList = document.getElementById("cartList");
-  cartList.innerHTML = "";
-  cart.forEach((qty, idx)=>{
-      if(qty){
-          total += qty*productsData[idx].price;
-          const itemDiv = document.createElement("div");
-          itemDiv.className = "cart-item";
-          itemDiv.innerHTML = `
-              <span>${productsData[idx].name}</span>
-              <span>السعر: ${productsData[idx].price} × 
-              <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"> = <strong>${productsData[idx].price*qty}</strong> جنيه</span>
-              <button onclick="removeItem(${idx})">حذف</button>
-          `;
-          cartList.appendChild(itemDiv);
-      }
-  });
-  document.getElementById("totalAmount").innerText = total;
-  document.getElementById("totalModal").style.display = "block";
-}
-
-function updateQty(idx, value){
-  value = parseInt(value);
-  if(value<=0) { delete cart[idx]; } else { cart[idx]=value; }
-  updateCartCount();
-  showTotal();
-}
-function removeItem(idx){
-  delete cart[idx];
-  updateCartCount();
-  showTotal();
-}
-function closeTotalModal(){ document.getElementById("totalModal").style.display = 'none'; }
-
-function sendOrder(){
-  const orderDiv = document.getElementById("orderNumbers");
-  orderDiv.style.display = "block";
-
-  orderDiv.querySelectorAll("a").forEach(a=>{
-    a.onclick = (e)=>{
-      e.preventDefault();
-      let orderText = "طلبية:%0A";
-      cart.forEach((qty, idx)=>{
-          if(qty){
-              orderText += `${productsData[idx].name} × ${qty} = ${productsData[idx].price*qty} جنيه%0A`;
-          }
-      });
-      const total = cart.reduce((sum, qty, idx) => qty ? sum + qty*productsData[idx].price : sum, 0);
-      orderText += `المجموع الكلي: ${total} جنيه`;
-      window.open(`${a.href}?text=${orderText}`, "_blank");
-    };
-  });
-}
-
-function openSupport(){
-  window.open("https://wa.me/201022495795", "_blank");
-}
-
-function checkNewProducts(){
-  const today = new Date().toISOString().split("T")[0];
-  let newCount = 0;
-  productsData.forEach(p=>{
-    if(p.date && p.date.startsWith(today)){
-      newCount++;
+  let total=0;
+  const cartList=document.getElementById("cartList");
+  cartList.innerHTML="";
+  cart.forEach((qty,idx)=>{
+    if(qty){
+      total+=qty*productsData[idx].price;
+      const div=document.createElement("div");
+      div.className="cart-item";
+      div.innerHTML=`<span>${productsData[idx].name}</span>
+                     <span>السعر: ${productsData[idx].price} × 
+                     <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"> = <strong>${productsData[idx].price*qty}</strong> جنيه</span>
+                     <button onclick="removeItem(${idx})">حذف</button>`;
+      cartList.appendChild(div);
     }
   });
-  if(newCount > 0){
-    document.getElementById("notif-count").innerText = newCount;
-    document.getElementById("notif-count").style.display = "inline-block";
-    document.getElementById("newBanner").style.display = "block";
-    let audio = new Audio("https://www.soundjay.com/buttons/sounds/button-3.mp3");
-    audio.play();
-    if(Notification.permission === "granted"){
-      new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
-    } else if(Notification.permission !== "denied"){
-      Notification.requestPermission().then(p=>{
-        if(p==="granted"){
-          new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
+  document.getElementById("totalAmount").innerText=total;
+  document.getElementById("totalModal").style.display="block";
+}
+
+function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); showTotal(); }
+function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
+function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
+
+// دالة إرسال الطلب بالشكل المطلوب
+document.getElementById("sendBtn").onclick = function(){
+  const orderDiv = document.getElementById("orderNumbers");
+  orderDiv.style.display="block";
+  orderDiv.querySelectorAll("a").forEach(a=>{
+    a.onclick=(e)=>{
+      e.preventDefault();
+      let text="طلبية:%0A%0A";
+      let total=0;
+      cart.forEach((qty,idx)=>{
+        if(qty){
+          const lineTotal=qty*productsData[idx].price;
+          total+=lineTotal;
+          text+=`${productsData[idx].name} × ${qty} = ${lineTotal} جنيه%0A`;
         }
       });
+      text+=`%0Aالمجموع الكلي: ${total} جنيه`;
+      window.open(`${a.href}?text=${text}`,"_blank");
     }
+  });
+}
+
+// أزرار الهيدر
+document.getElementById("cartBtn").onclick=showTotal;
+document.getElementById("totalBtn").onclick=showTotal;
+document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
+
+// إشعارات المنتجات الجديدة
+function checkNewProducts(){
+  const today=(new Date()).toISOString().split("T")[0];
+  let newCount=0;
+  productsData.forEach(p=>{ if(p.date&&p.date.startsWith(today)) newCount++; });
+  if(newCount>0){
+    document.getElementById("notif-count").innerText=newCount;
+    document.getElementById("notif-count").style.display="inline-block";
+    document.getElementById("newBanner").style.display="block";
+    let audio=new Audio("https://www.soundjay.com/buttons/sounds/button-3.mp3"); audio.play();
+    if(Notification.permission==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
+    else if(Notification.permission!=="denied") Notification.requestPermission().then(p=>{ if(p==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`); });
   }
 }
 
+// البحث
 document.getElementById("searchBox").addEventListener("input", function(){
-  const keyword = this.value.trim().toLowerCase();
-  const filtered = productsData.filter(p => p.name.toLowerCase().includes(keyword));
+  const keyword=this.value.trim().toLowerCase();
+  const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
   renderProducts(filtered);
 });
 </script>
