--- a/products.html
+++ b/products.html
@@ -25,40 +25,29 @@ header { background:#131921; color:white; padding:15px; text-align:center; font-
 .product button { padding:5px 10px; border:none; border-radius:5px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
 .product button:hover { background:#6a1fbf; transform:scale(1.05); }
 
-/* تعديل الفاتورة */
 #totalModal { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#fff; padding:20px; border-radius:15px; box-shadow:0 3px 15px rgba(0,0,0,0.3); text-align:center; z-index:1002; width:90%; max-width:600px; max-height:80%; overflow-y:auto; }
 #totalModal h2 { font-size:20px; margin-bottom:15px; color:#8a2be2; }
 #totalModal button { margin:5px; padding:8px 15px; border:none; border-radius:10px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
 #totalModal button:hover { background:#6a1fbf; }
 #cartList { text-align:right; margin-bottom:10px; display:flex; flex-direction:column; gap:5px; }
 
-/* ترتيب عناصر الفاتورة */
 .cart-item {
     display: grid;
-    grid-template-columns: 3fr 1fr 1fr 1fr auto; /* الاسم - الكمية - السعر - الإجمالي - حذف */
+    grid-template-columns: 3fr 1fr 1fr 1fr auto;
     align-items: center;
     padding: 5px 10px;
     border-bottom: 1px solid #ccc;
     gap: 5px;
 }
-
-.cart-item span, .cart-item input, .cart-item button {
-    text-align: center;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-
-.cart-item span:first-child { text-align: right; } /* الاسم على اليمين */
+.cart-item span, .cart-item input, .cart-item button { text-align: center; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; }
+.cart-item span:first-child { text-align: right; }
 .cart-item input { width:60px; }
 .cart-item button { padding:5px 10px; background:#ff4444; color:#fff; border:none; border-radius:5px; cursor:pointer; }
 .cart-item button:hover { background:#cc0000; }
 
 #orderNumbers a { display:block; margin:5px 0; font-size:16px; color:#8a2be2; font-weight:bold; text-decoration:none; }
 #orderNumbers a:hover { color:#6a1fbf; text-decoration:underline; }
-
 #toast { position:fixed; bottom:20px; right:20px; background:#25d366; color:#fff; padding:10px 20px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.3); display:none; z-index:1003; }
-
 </style>
 </head>
 <body>
@@ -116,6 +105,7 @@ function renderProducts(data){
   container.innerHTML=html;
 }
 
+// ✅ تحميل المنتجات
 (async function(){
   if(localStorage.getItem("products")){
     productsData=JSON.parse(localStorage.getItem("products"));
@@ -128,11 +118,18 @@ function renderProducts(data){
     localStorage.setItem("products",JSON.stringify(productsData));
     renderProducts(productsData);
   }catch(err){ console.log("❌ خطأ في جلب المنتجات:",err);}
+  loadCart(); // ✅ استرجاع السلة بعد تحميل المنتجات
 })();
 
 function showToast(msg){ const toast=document.getElementById("toast"); toast.innerText=msg; toast.style.display="block"; setTimeout(()=>toast.style.display="none",1200); }
 function updateCartCount(){ const count=cart.reduce((sum,qty)=>qty?sum+qty:sum,0); const badge=document.getElementById("cart-count"); if(count>0){badge.style.display="inline-block"; badge.innerText=count;}else badge.style.display="none"; }
-function addToCart(index){ const input=document.querySelector(`input[data-index='${index}']`); const qty=parseInt(input.value); if(qty<=0) return; cart[index]=(cart[index]||0)+qty; updateCartCount(); showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`); }
+
+// ✅ حفظ السلة
+function saveCart(){ localStorage.setItem("cart", JSON.stringify(cart)); }
+// ✅ استرجاع السلة
+function loadCart(){ const saved=localStorage.getItem("cart"); if(saved){ cart=JSON.parse(saved); updateCartCount(); } }
+
+function addToCart(index){ const input=document.querySelector(`input[data-index='${index}']`); const qty=parseInt(input.value); if(qty<=0) return; cart[index]=(cart[index]||0)+qty; updateCartCount(); saveCart(); showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`); }
 
 function showTotal(){
   let total=0;
@@ -160,25 +157,27 @@ function showTotal(){
   document.getElementById("totalModal").style.display="block";
 }
 
-function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); showTotal(); }
-function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
+function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); saveCart(); showTotal(); }
+function removeItem(idx){ delete cart[idx]; updateCartCount(); saveCart(); showTotal(); }
 function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
 
+// ✅ إرسال منظم للواتساب
 document.getElementById("sendBtn").onclick=function(){
   const orderDiv=document.getElementById("orderNumbers");
   orderDiv.style.display="block";
   orderDiv.querySelectorAll("a").forEach(a=>{
     a.onclick=(e)=>{
       e.preventDefault();
-      let text="طلبية:%0A%0A"; let total=0;
+      let text="🧾 *طلبية جديدة* %0A%0A"; let total=0;
       cart.forEach((qty, idx)=>{
         if(qty){
-          const lineTotal=qty*productsData[idx].price;
+          const price=productsData[idx].price;
+          const lineTotal=qty*price;
           total+=lineTotal;
-          text+=`${productsData[idx].name} × ${qty} = ${lineTotal} جنيه%0A`;
+          text+=`• ${productsData[idx].name}%0A   الكمية: ${qty} × ${price} = ${lineTotal} جنيه%0A%0A`;
         }
       });
-      text+=`%0Aالمجموع الكلي: ${total} جنيه`;
+      text+=`💰 *المجموع الكلي:* ${total} جنيه`;
       window.open(`${a.href}?text=${text}`,"_blank");
     }
   });
