--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>جميع منتجات جنة</title>
 <style>
-body { font-family: Tahoma, sans-serif; margin:0; background:#f9f9f9; }
+body { font-family: Tahoma, sans-serif; margin: 0; background: #f9f9f9; }
 
 /* الهيدر */
 header {
@@ -19,11 +19,19 @@ header {
   top: 0;
   z-index: 1000;
 }
-.header-buttons { margin-top: 10px; display: flex; flex-wrap: wrap; justify-content: center; gap:5px;}
+.header-buttons {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  position: relative;
+}
 .header-buttons button {
+  position: relative;
   background: #ffd814;
   border: 1px solid #fcd200;
   padding: 6px 12px;
+  margin: 0 5px;
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
@@ -36,6 +44,7 @@ header {
   background: #ff4444;
   border: 1px solid #cc0000;
   padding: 6px 12px;
+  margin: 0 5px;
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
@@ -68,8 +77,8 @@ header {
 /* عداد السلة */
 #cart-count {
   position: absolute;
-  top: -8px;
-  right: -8px;
+  top: -10px;
+  right: -10px;
   background: red;
   color: #fff;
   font-size: 12px;
@@ -109,25 +118,11 @@ header {
   transition: 0.3s;
 }
 .product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
-.product img {
-  width: 100%;
-  height: 120px;
-  object-fit: contain;
-  margin-bottom: 8px;
-}
+.product img { width: 100%; height: 120px; object-fit: contain; margin-bottom: 8px; }
 .name { font-size: 16px; margin: 5px 0; color: #333; }
 .price { font-weight: bold; margin-bottom: 5px; }
 .product input { width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
-.product button {
-  padding: 5px 10px;
-  border: none;
-  border-radius: 5px;
-  background: #8a2be2;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bold;
-  transition: 0.3s;
-}
+.product button { padding: 5px 10px; border: none; border-radius: 5px; background: #8a2be2; color: #fff; cursor: pointer; font-weight: bold; transition: 0.3s; }
 .product button:hover { background: #6a1fbf; transform: scale(1.05); }
 
 /* نافذة اجمالي الفاتورة */
@@ -147,33 +142,13 @@ header {
   max-height: 80%;
   overflow-y: auto;
 }
-#totalModal h2 {
-  font-size: 20px;
-  margin-bottom: 15px;
-  color: #8a2be2;
-}
-#totalModal button {
-  margin: 5px;
-  padding: 8px 15px;
-  border: none;
-  border-radius: 10px;
-  background: #8a2be2;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bold;
-  transition: 0.3s;
-}
+#totalModal h2 { font-size: 20px; margin-bottom: 15px; color: #8a2be2; }
+#totalModal button { margin: 5px; padding: 8px 15px; border: none; border-radius: 10px; background: #8a2be2; color: #fff; cursor: pointer; font-weight: bold; transition: 0.3s; }
 #totalModal button:hover { background: #6a1fbf; }
 
 /* قائمة السلة */
 #cartList { text-align: right; margin-bottom: 10px; }
-.cart-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #ccc;
-  padding: 5px 0;
-}
+.cart-item { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #ccc; padding: 5px 0; }
 .cart-item span { margin: 0 5px; }
 .cart-item button { padding: 2px 8px; font-size: 14px; }
 
@@ -188,7 +163,6 @@ header {
 }
 #orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
 
-/* Toast */
 #toast {
   position: fixed;
   bottom: 20px; right: 20px;
@@ -207,22 +181,30 @@ header {
 <header>
   📦 جميع منتجات جنة
   <div class="header-buttons">
-    <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
-    <button id="totalBtn">💰 إجمالي الفاتورة</button>
-    <button id="supportBtn">☎️ الدعم الفني</button>
-    <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
+    <button onclick="showTotal()">🛒 السلة <span id="cart-count">0</span></button>
+    <button onclick="showTotal()">💰 إجمالي الفاتورة</button>
+    <button onclick="openSupport()">☎️ الدعم الفني</button>
     <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
   </div>
-  <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
 </header>
 
 <div id="newBanner">🎉 منتجات جديدة اليوم!</div>
+
+<!-- مربع البحث -->
+<input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
+
+<!-- إدخال كلمة السر لتحديد السعر -->
+<div style="text-align:center; margin:10px;">
+  <input type="password" id="pricePass" placeholder="ادخل كلمة السر للسعر">
+  <button onclick="checkPricePassword(document.getElementById('pricePass').value)">تفعيل السعر</button>
+</div>
+
 <div id="products-container"></div>
 
 <div id="totalModal">
   <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
   <div id="cartList"></div>
-  <button id="sendBtn">📤 إرسال عبر واتساب</button>
+  <button onclick="sendOrder()">📤 إرسال عبر واتساب</button>
   <button onclick="closeTotalModal()">❌ إغلاق</button>
   <div id="orderNumbers" style="margin-top:10px; display:none;">
     <p>اختر رقم لإرسال الطلب 👇</p>
@@ -239,24 +221,45 @@ const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSff
 const container = document.getElementById("products-container");
 let productsData = [];
 let cart = [];
+let priceMode = null;
+
+// دالة لتحديد نوع السعر
+function checkPricePassword(pass){
+  if(pass === "010024"){ 
+    priceMode = "wholesale";
+    alert("تم تفعيل عرض جملة ✅");
+  } else if(pass === "567"){ 
+    priceMode = "retail";
+    alert("تم تفعيل عرض قطاعي ✅");
+  } else {
+    alert("❌ كلمة السر غير صحيحة");
+  }
+  renderProducts(productsData);
+}
 
 // عرض المنتجات
 function renderProducts(data){
-  let html = "";
-  for(let i=0;i<data.length;i++){
-      const item = data[i];
-      html += `<div class="product">
-                  <img src="${item.image || 'https://via.placeholder.com/150'}">
-                  <div class="name">${item.name}</div>
-                  <div class="price">السعر: ${item.price} جنيه</div>
-                  <input type="number" min="1" value="1" data-index="${i}">
-                  <button onclick="addToCart(${i})">أضف إلى السلة</button>
-               </div>`;
-  }
-  container.innerHTML = html;
+    let html = "";
+    for(let i=0;i<data.length;i++){
+        const item = data[i];
+        let displayPrice = item.price; 
+        if(priceMode==="wholesale" && item.wholesalePrice) displayPrice = item.wholesalePrice;
+        if(priceMode==="retail" && item.retailPrice) displayPrice = item.retailPrice;
+
+        html += `
+            <div class="product">
+                <img src="${item.image || 'https://via.placeholder.com/150'}" alt="صورة المنتج">
+                <div class="name">${item.name}</div>
+                <div class="price">السعر: ${displayPrice} جنيه</div>
+                <input type="number" min="1" value="1" data-index="${i}">
+                <button onclick="addToCart(${i})">أضف إلى السلة</button>
+            </div>
+        `;
+    }
+    container.innerHTML = html;
 }
 
-// تحميل سريع للمنتجات
+// تحميل المنتجات
 (async function(){
    if(localStorage.getItem("products")){
       productsData = JSON.parse(localStorage.getItem("products"));
@@ -280,91 +283,122 @@ function showToast(msg){
 }
 
 function updateCartCount(){
-  const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
+  const count = Object.values(cart).reduce((sum, item)=> sum + (item?.qty || 0),0);
   const badge = document.getElementById("cart-count");
-  badge.style.display = count>0?"inline-block":"none";
-  badge.innerText = count;
+  if(count>0){
+    badge.style.display = "inline-block";
+    badge.innerText = count;
+  } else {
+    badge.style.display = "none";
+  }
 }
 
 function addToCart(index){
   const input = container.querySelector(`input[data-index='${index}']`);
   const quantity = parseInt(input.value);
-  if(quantity<=0) return;
-  cart[index] = (cart[index] || 0) + quantity;
+  if(quantity <=0) return;
+
+  const item = productsData[index];
+  let price = item.price;
+  if(priceMode==="wholesale" && item.wholesalePrice) price = item.wholesalePrice;
+  if(priceMode==="retail" && item.retailPrice) price = item.retailPrice;
+
+  cart[index] = { qty: (cart[index]?.qty || 0) + quantity, price: price, name: item.name };
   updateCartCount();
-  showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`);
+  showToast(`${item.name} تم إضافته/تحديثه في السلة`);
 }
 
 function showTotal(){
-  let total=0;
-  const cartList=document.getElementById("cartList");
-  cartList.innerHTML="";
-  cart.forEach((qty,idx)=>{
-    if(qty){
-      total+=qty*productsData[idx].price;
-      const div=document.createElement("div");
-      div.className="cart-item";
-      div.innerHTML=`<span>${productsData[idx].name}</span>
-                     <span>السعر: ${productsData[idx].price} × 
-                     <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"> = <strong>${productsData[idx].price*qty}</strong> جنيه</span>
-                     <button onclick="removeItem(${idx})">حذف</button>`;
-      cartList.appendChild(div);
-    }
+  let total = 0;
+  const cartList = document.getElementById("cartList");
+  cartList.innerHTML = "";
+  Object.keys(cart).forEach(idx=>{
+    const c = cart[idx];
+    total += c.price * c.qty;
+    const itemDiv = document.createElement("div");
+    itemDiv.className = "cart-item";
+    itemDiv.innerHTML = `
+      <span>${c.name}</span>
+      <span>السعر: ${c.price} × 
+      <input type="number" min="1" value="${c.qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"> = <strong>${c.price*c.qty}</strong> جنيه</span>
+      <button onclick="removeItem(${idx})">حذف</button>
+    `;
+    cartList.appendChild(itemDiv);
   });
-  document.getElementById("totalAmount").innerText=total;
-  document.getElementById("totalModal").style.display="block";
+  document.getElementById("totalAmount").innerText = total;
+  document.getElementById("totalModal").style.display = "block";
 }
 
-function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); showTotal(); }
+function updateQty(idx, value){
+  value = parseInt(value);
+  if(value<=0) { delete cart[idx]; } else { cart[idx].qty=value; }
+  updateCartCount();
+  showTotal();
+}
 function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
-function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
+function closeTotalModal(){ document.getElementById("totalModal").style.display = 'none'; }
 
-// دالة إرسال الطلب بالشكل المطلوب
-document.getElementById("sendBtn").onclick = function(){
+// ✅ شكل الفاتورة الجديد
+function sendOrder(){
   const orderDiv = document.getElementById("orderNumbers");
-  orderDiv.style.display="block";
+  orderDiv.style.display = "block";
   orderDiv.querySelectorAll("a").forEach(a=>{
-    a.onclick=(e)=>{
+    a.onclick = (e)=>{
       e.preventDefault();
-      let text="طلبية:%0A%0A";
-      let total=0;
-      cart.forEach((qty,idx)=>{
-        if(qty){
-          const lineTotal=qty*productsData[idx].price;
-          total+=lineTotal;
-          text+=`${productsData[idx].name} × ${qty} = ${lineTotal} جنيه%0A`;
+      let total = 0;
+      let text = "🧾 *طلبية جديدة* %0A%0A";
+      text+=`📦 المنتج | 🔢 الكمية | 💵 السعر | 📊 الإجمالي%0A`;
+      text+=`--------------------------------%0A`;
+
+      Object.values(cart).forEach(c=>{
+        const lineTotal = c.qty * c.price;
+        total += lineTotal;
+        text+=`${c.name} | ${c.qty} | ${c.price}ج | ${lineTotal}ج%0A`;
+      });
+
+      text+=`--------------------------------%0A`;
+      text+=`✅ *المجموع الكلي:* ${total} جنيه`;
+
+      window.open(`${a.href}?text=${text}`,"_blank")
+    };
+  });
+}
+
+function openSupport(){ window.open("https://wa.me/201022495795", "_blank"); }
+
+// 🔔 التحقق من المنتجات الجديدة
+function checkNewProducts(){
+  const today = new Date().toISOString().split("T")[0];
+  let newCount = 0;
+
+  productsData.forEach(p=>{
+    if(p.date && p.date.startsWith(today)){
+      newCount++;
+    }
+  });
+
+  if(newCount > 0){
+    document.getElementById("notif-count").innerText = newCount;
+    document.getElementById("notif-count").style.display = "inline-block";
+    document.getElementById("newBanner").style.display = "block";
+    let audio = new Audio("https://www.soundjay.com/buttons/sounds/button-3.mp3");
+    audio.play();
+    if(Notification.permission === "granted"){
+      new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
+    } else if(Notification.permission !== "denied"){
+      Notification.requestPermission().then(p=>{
+        if(p==="granted"){
+          new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
         }
       });
-      text+=`%0Aالمجموع الكلي: ${total} جنيه`;
-      window.open(`${a.href}?text=${text}`,"_blank");
     }
-  });
-}
-
-// أزرار الهيدر
-document.getElementById("cartBtn").onclick=showTotal;
-document.getElementById("totalBtn").onclick=showTotal;
-document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
-
-// إشعارات المنتجات الجديدة
-function checkNewProducts(){
-  const today=(new Date()).toISOString().split("T")[0];
-  let newCount=0;
-  productsData.forEach(p=>{ if(p.date&&p.date.startsWith(today)) newCount++; });
-  if(newCount>0){
-    document.getElementById("notif-count").innerText=newCount;
-    document.getElementById("notif-count").style.display="inline-block";
-    document.getElementById("newBanner").style.display="block";
-    let audio=new Audio("https://www.soundjay.com/buttons/sounds/button-3.mp3"); audio.play();
-    if(Notification.permission==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
-    else if(Notification.permission!=="denied") Notification.requestPermission().then(p=>{ if(p==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`); });
   }
 }
 
-// البحث
+// 🔍 البحث
 document.getElementById("searchBox").addEventListener("input", function(){
-  const keyword=this.value.trim().toLowerCase();
-  const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
+  const keyword = this.value.trim().toLowerCase();
+  const filtered = productsData.filter(p => p.name.toLowerCase().includes(keyword));
   renderProducts(filtered);
 });
 </script>
